<resources>
    <string name="app_name">GeoQuiz5</string>
    <string name="question_australia">Канберра - столица Австралии</string>

    <string name="true_button">Правда</string>
    <string name="false_button">Ложь</string>
    <string name="next_button">Дальше</string>
    <string name="back_button">Назад</string>
    <string name="peek_button_main">Подсмотреть!</string>
    <string name="peek_button">Подсмотреть ответ!</string>

    <string name="correct_toast">Верно!</string>
    <string name="incorrect_toast">Неверно!</string>

    <string name="question_oceans">Тихий океан больше атлантического</string>
    <string name="question_mideast">Суэцкий канал соединяет Красное море и Индийский океан</string>
    <string name="question_africa">Исток реки Нил находится в Египте</string>
    <string name="question_americas">Река Амазонка - самая протяжённая река в Америке</string>
    <string name="question_asia">Озеро Байкал - старейшее и глубочайшее пресное озеро в мире</string>

    <string name="peek_message">Вы уверены, что хотите сделать это?</string>
    <string name="next_voice_message">next</string>
    <string name="back_voice_message">back</string>
</resources>